Actions
Bug #9645
closed[PATCH] variable.c: avoid memory leak on const redefinition
Bug #9645:
[PATCH] variable.c: avoid memory leak on const redefinition
Description
I noticed this leak because I was making constants use ihash from Feature 9614.
I hope nobody is really affected by this leak.
Files
Updated by Anonymous over 12 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
Applied in changeset r45350.
variable.c: avoid memory leak on const redefinition
- variable.c (rb_const_set): delete existing entry on redefinition
[Bug #9645] - test/ruby/test_const.rb (test_redefinition): test for leak
Updated by nagachika (Tomoyuki Chikanaga) over 12 years ago
- Backport changed from 2.0.0: REQUIRED, 2.1: REQUIRED to 2.0.0: DONE, 2.1: REQUIRED
r45350 was backported to ruby_2_0_0 at r45373.
Updated by nagachika (Tomoyuki Chikanaga) over 12 years ago
- Backport changed from 2.0.0: DONE, 2.1: REQUIRED to 2.0.0: DONE, 2.1: DONE
Backported into ruby_2_1 branch at r46301.
Actions